--- a/HW9/higgsbosonSearch.ipynb
+++ b/HW9/higgsbosonSearch.ipynb
@@ -2567,7 +2567,11 @@
       "metadata": {
         "id": "LmYaTkM9rh6f",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 195
+        },
+        "outputId": "0f6f9ecc-18d4-4749-a8e7-639042e1fd3f"
       },
       "source": [
         "importantfeatures = rf.feature_importances_\n",
@@ -2579,7 +2583,400 @@
         "higgsimportantfeatures = higgstraining.iloc[:,newsortedcolumns]\n",
         "higgsimportanttraining = hbtrain.iloc[:,newsortedcolumns]\n",
         "higgsimportanttest = hbtest.iloc[:,newsortedcolumns]\n",
-        "higgsimportantfeatures.head()\n"
+        "higgsimportantfeatures.head()"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>PRI_jet_num</th>\n",
+              "      <th>PRI_jet_subleading_eta</th>\n",
+              "      <th>PRI_jet_subleading_phi</th>\n",
+              "      <th>PRI_jet_subleading_pt</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1.24</td>\n",
+              "      <td>-2.475</td>\n",
+              "      <td>46.062</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1</td>\n",
+              "      <td>-999.00</td>\n",
+              "      <td>-999.000</td>\n",
+              "      <td>-999.000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1</td>\n",
+              "      <td>-999.00</td>\n",
+              "      <td>-999.000</td>\n",
+              "      <td>-999.000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0</td>\n",
+              "      <td>-999.00</td>\n",
+              "      <td>-999.000</td>\n",
+              "      <td>-999.000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>-999.00</td>\n",
+              "      <td>-999.000</td>\n",
+              "      <td>-999.000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   PRI_jet_num  ...  PRI_jet_subleading_pt\n",
+              "0            2  ...                 46.062\n",
+              "1            1  ...               -999.000\n",
+              "2            1  ...               -999.000\n",
+              "3            0  ...               -999.000\n",
+              "4            0  ...               -999.000\n",
+              "\n",
+              "[5 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "K4rac8G4uO5f",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "outputId": "31ba7a32-f429-4115-ef2e-0af88f2424f9"
+      },
+      "source": [
+        "random_grid = {'n_estimators': [10,100], 'max_depth': [3,10, None],'bootstrap': [True,False],'max_features':['auto','sqrt'],'random_state' : [0]}\n",
+        "pp.pprint(random_grid)"
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'bootstrap': [True, False],\n",
+            " 'max_depth': [3, 10, None],\n",
+            " 'max_features': ['auto', 'sqrt'],\n",
+            " 'n_estimators': [10, 100],\n",
+            " 'random_state': [0]}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U6vrDjm8s6T4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "# Use the random grid to search for best hyperparameters\n",
+        "# First create the base model to tune\n",
+        "# Random search of parameters, using 3 fold cross validation, \n",
+        "# search across 18 different combinations\n",
+        "random_search = RandomizedSearchCV(estimator = rf, param_distributions=random_grid,\n",
+        "                                   n_iter=1, cv=3, iid=False)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "toumUASku8oM",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 437
+        },
+        "outputId": "7f7b4b8d-7b1f-4bec-b475-80f39207917e"
+      },
+      "source": [
+        "random_search.fit(higgsimportanttraining.values,labeltrain)\n",
+        "#this did not take an hour that probably means i did something wrong alas"
+      ],
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomizedSearchCV(cv=3, error_score='raise-deprecating',\n",
+              "                   estimator=RandomForestClassifier(bootstrap=True,\n",
+              "                                                    class_weight=None,\n",
+              "                                                    criterion='gini',\n",
+              "                                                    max_depth=None,\n",
+              "                                                    max_features='auto',\n",
+              "                                                    max_leaf_nodes=None,\n",
+              "                                                    min_impurity_decrease=0.0,\n",
+              "                                                    min_impurity_split=None,\n",
+              "                                                    min_samples_leaf=1,\n",
+              "                                                    min_samples_split=2,\n",
+              "                                                    min_weight_fraction_leaf=0.0,\n",
+              "                                                    n_estimators=10,\n",
+              "                                                    n_jobs=None,\n",
+              "                                                    oob_score=False,\n",
+              "                                                    random_state=0, verbose=0,\n",
+              "                                                    warm_start=False),\n",
+              "                   iid=False, n_iter=1, n_jobs=None,\n",
+              "                   param_distributions={'bootstrap': [True, False],\n",
+              "                                        'max_depth': [3, 10, None],\n",
+              "                                        'max_features': ['auto', 'sqrt'],\n",
+              "                                        'n_estimators': [10, 100],\n",
+              "                                        'random_state': [0]},\n",
+              "                   pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
+              "                   return_train_score=False, scoring=None, verbose=0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SBhYtS89vIU0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 437
+        },
+        "outputId": "440cf3ba-f571-49d3-8160-4740d29a595f"
+      },
+      "source": [
+        "random_search.fit(higgsimportanttest.values,labeltest)"
+      ],
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "RandomizedSearchCV(cv=3, error_score='raise-deprecating',\n",
+              "                   estimator=RandomForestClassifier(bootstrap=True,\n",
+              "                                                    class_weight=None,\n",
+              "                                                    criterion='gini',\n",
+              "                                                    max_depth=None,\n",
+              "                                                    max_features='auto',\n",
+              "                                                    max_leaf_nodes=None,\n",
+              "                                                    min_impurity_decrease=0.0,\n",
+              "                                                    min_impurity_split=None,\n",
+              "                                                    min_samples_leaf=1,\n",
+              "                                                    min_samples_split=2,\n",
+              "                                                    min_weight_fraction_leaf=0.0,\n",
+              "                                                    n_estimators=10,\n",
+              "                                                    n_jobs=None,\n",
+              "                                                    oob_score=False,\n",
+              "                                                    random_state=0, verbose=0,\n",
+              "                                                    warm_start=False),\n",
+              "                   iid=False, n_iter=1, n_jobs=None,\n",
+              "                   param_distributions={'bootstrap': [True, False],\n",
+              "                                        'max_depth': [3, 10, None],\n",
+              "                                        'max_features': ['auto', 'sqrt'],\n",
+              "                                        'n_estimators': [10, 100],\n",
+              "                                        'random_state': [0]},\n",
+              "                   pre_dispatch='2*n_jobs', random_state=None, refit=True,\n",
+              "                   return_train_score=False, scoring=None, verbose=0)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q8dgf0Btv--E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "tuneparamaters = random_search.best_params_"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Q3tOTcxavnu9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "1d27080c-aea7-451a-cf33-e99b1516ddc0"
+      },
+      "source": [
+        "print(\"Tuned RF  Parameters: {}\".format(tuneparamaters))\n",
+        "print(\"Best score is {}\".format(random_search.best_score_))\n",
+        "# i love autofill"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Tuned RF  Parameters: {'random_state': 0, 'n_estimators': 100, 'max_features': 'auto', 'max_depth': 10, 'bootstrap': False}\n",
+            "Best score is 0.6787840761445864\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "So7-7vH1wDyc",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 147
+        },
+        "outputId": "ee990de8-e25c-4302-bd56-8d99e24a917f"
+      },
+      "source": [
+        "#print results\n",
+        "finalsearchresults = pd.DataFrame(random_search.cv_results_)\n",
+        "finalsearchresults"
+      ],
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>mean_fit_time</th>\n",
+              "      <th>std_fit_time</th>\n",
+              "      <th>mean_score_time</th>\n",
+              "      <th>std_score_time</th>\n",
+              "      <th>param_random_state</th>\n",
+              "      <th>param_n_estimators</th>\n",
+              "      <th>param_max_features</th>\n",
+              "      <th>param_max_depth</th>\n",
+              "      <th>param_bootstrap</th>\n",
+              "      <th>params</th>\n",
+              "      <th>split0_test_score</th>\n",
+              "      <th>split1_test_score</th>\n",
+              "      <th>split2_test_score</th>\n",
+              "      <th>mean_test_score</th>\n",
+              "      <th>std_test_score</th>\n",
+              "      <th>rank_test_score</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>2.928216</td>\n",
+              "      <td>0.018286</td>\n",
+              "      <td>0.185882</td>\n",
+              "      <td>0.000945</td>\n",
+              "      <td>0</td>\n",
+              "      <td>100</td>\n",
+              "      <td>auto</td>\n",
+              "      <td>10</td>\n",
+              "      <td>False</td>\n",
+              "      <td>{'random_state': 0, 'n_estimators': 100, 'max_...</td>\n",
+              "      <td>0.67697</td>\n",
+              "      <td>0.678218</td>\n",
+              "      <td>0.681164</td>\n",
+              "      <td>0.678784</td>\n",
+              "      <td>0.001758</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   mean_fit_time  std_fit_time  ...  std_test_score  rank_test_score\n",
+              "0       2.928216      0.018286  ...        0.001758                1\n",
+              "\n",
+              "[1 rows x 16 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u3svN1sbwhQ9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
